--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Fusée de l'Infini</title>
+<title>Fusée Infinity</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <style>
@@ -112,7 +112,7 @@ button{background:#2196f3;color:white;cursor:pointer}
 <body>
 
 <div id="home-screen" class="screen active">
-    <div id="title">FUSÉE DE L'INFINI</div>
+    <div id="title">FUSÉE INFINITY</div>
     <input id="pseudo" placeholder="Ton pseudo">
     <button onclick="play()">Jouer</button>
     <button onclick="showLeaderboard()">Classement</button>
